third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/dereference_combo.exp

Diagnostics:
error: cannot copy mutable reference in local `s`
   ┌─ tests/reference-safety/v1-tests/dereference_combo.move:28:23
   │
28 │         if (cond) x = copy s else x = other; // error in v2 because of copy of mut ref
   │                       ^^^^^^ copied here


Diagnostics:
error: cannot copy mutable reference in local `s` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/dereference_combo.move:21:9
   │
20 │         if (cond) f = &s.f else f = &s.g;
   │                       ----          ---- previous field borrow
   │                       │
   │                       previous field borrow
21 │         *s;
   │         ^^ copied here

error: cannot copy mutable reference in local `s` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/dereference_combo.move:13:9
   │
12 │         if (cond) f = &s.f else f = &other.f;
   │                       ---- previous field borrow
13 │         *s;
   │         ^^ copied here
